[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Hub/Stations/shared/Station.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 78.0102, 74.6338 )

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[node name="Station" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.47579, 2.36417 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 2 )

[node name="ProximityIndicator" type="ColorRect" parent="."]
visible = false
margin_left = -78.0
margin_top = -73.0
margin_right = 76.0
margin_bottom = 73.0
color = Color( 1, 1, 1, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_DetectionRange_body_exited"]
